# mercury

./: .gitignore  API.md  CONFIGURATION.md  Cargo.toml  README.md  SECURITY.md  example-auth-config.json  install.sh  mercury.service
src/: args.rs  auth.rs  config.rs  health.rs  lib.rs  main.rs  protocol.rs  websocket_server.rs  websocket_server_old.rs
tests/: integration_tests.rs
