[package]
name = "mercury"
version = "0.1.0"
edition = "2024"
authors = ["Dominic Pearson <dsp@technoanimal.net>"]
description = "Storage server for Hecate encrypted archives with list and retrieval support"
license = "ISC"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.41", features = ["full"] }
anyhow = "1.0"
chrono = "0.4"
uuid = { version = "1.11", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tungstenite = "0.24"
rustls = { version = "0.23", features = ["aws_lc_rs", "log", "logging", "ring", "std", "tls12"], default-features = false }
rustls-pemfile = "2.0"
tokio-rustls = "0.26"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.21"
toml = "0.9.5"
argon2 = "0.5.3"
axum = "0.8.4"
